# Smart_Humidifier_V2

./: .gitattributes  LICENSE  README.md  index.html
Humidifier_V9_Core/: README.md
Humidifier_V9_Core/main/: board_pins.h
V10 最终交付版/Humidifier_V9_Core/: CMakeLists.txt
V10 最终交付版/Humidifier_V9_Core/main/: CMakeLists.txt  all_code_summary.md  bsp_atomizer.c  bsp_atomizer.h  bsp_voice.h  bsp_ws2812.h  idf_component.yml  main.c  自动生成本文件夹的.c文件到 Makedown.bat
main/: bsp_atomizer.c  bsp_led.c  bsp_led.h  bsp_voice.c  bsp_ws2812.c
